add shadcdn accordion

--- a/app/components/style.module.css
+++ b/app/components/style.module.css
@@ -28,4 +28,14 @@
   }
 
 
-  
+.almostFull{
+  width: 80%;
+  margin:auto
+}
+
+@media (min-width: 768px) {
+  .almostFull {
+      width:75%;
+     
+  }
+}
